--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
     "@hookform/resolvers": "^4.1.0",
     "@next/bundle-analyzer": "^15.1.7",
     "@prisma/client": "^6.4.0",
@@ -46,6 +47,7 @@
     "motion": "^12.4.7",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
@@ -55,6 +57,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "resend": "^6.4.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
