--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next": "15.1.7",
@@ -58,6 +58,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^6.4.1",
+    "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
