--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next": "^15.2.5",
@@ -74,11 +75,11 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.2.5",
     "eslint-config-prettier": "^10.0.1",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.6",
     "prettier": "3.5.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.3",
