--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@googlemaps/js-api-loader": "^2.0.2",
     "@hookform/resolvers": "^4.1.0",
     "@next/bundle-analyzer": "^15.2.5",
@@ -56,6 +57,7 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.12",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "prisma": "^6.4.0",
@@ -73,6 +75,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20.17.19",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
