--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && node scripts/generate-catalog.mjs && next build",
+    "generate-catalog": "node scripts/generate-catalog.mjs",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
